--- a/package.json
+++ b/package.json
@@ -11,18 +11,29 @@
   "dependencies": {
     "@emotion/cache": "^11.11.0",
     "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.2",
     "@mui/material-nextjs": "^5.15.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
+    "jspdf": "^2.5.1",
     "next": "14.0.4",
     "nextjs-toploader": "^1.6.4",
+    "pdf-lib": "^1.17.1",
+    "pdf-merger-js": "^4.3.0",
+    "pdf-viewer": "^0.8.1",
+    "pdfjs-dist": "^3.4.120",
+    "raw-loader": "^4.0.2",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-pdf": "^7.6.0",
+    "react-pdf-viewer": "^0.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
