--- a/package.json
+++ b/package.json
@@ -24,15 +24,12 @@
     "next": "14.0.4",
     "nextjs-toploader": "^1.6.4",
     "pdf-lib": "^1.17.1",
-    "pdf-merger-js": "^4.3.0",
-    "pdf-viewer": "^0.8.1",
-    "pdfjs-dist": "^3.4.120",
+    "pdfjs-dist": "3.4.120",
     "raw-loader": "^4.0.2",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "react-pdf": "^7.6.0",
     "react-pdf-viewer": "^0.1.0"
   },
   "devDependencies": {
